--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -41,6 +41,7 @@
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-rgb));
+  letter-spacing: 0.075em;
 }
 
 p {
